[metadata]
author = Allen Goodman
author_email = allen.goodman@icloud.com
classifiers =
    Programming Language :: Python
license = BSD-3-Clause
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Allen Goodman
maintainer_email = allen.goodman@icloud.com
name = cytominer-transport
project_urls =
    Source Code = https://github.com/cytomining/cytominer-transport
    Issue Tracker = https://github.com/cytomining/cytominer-transport/issues
url = https://github.com/cytomining/cytominer-transport
version = attr: cytominer_transport.__version__

[options]
include_package_data = true
package_dir = = src
packages = find:
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    cytominer-transport = cytominer_transport.cli:main

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
